# nyann

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  clear.sh  nya-nn.sln  nyann.sln
nya-nn/: main.cpp  nya-nn.vcxproj  nya-nn.vcxproj.filters  nyann.h  tmp
nya-nn/examples/: labs.h
nya-nn/labs/: labs.h
nya-nn/nyann/: ActivationFunction.h  FCLayer.h  Layer.h  Loss.h  Net.h  Optimizer.h  dataset.h  def.h  drafts.h  utils.h
nya-nn/nyann-python/wrappers/: DataSetGeneration.h  plot.h
nya-nn/nyann/ActivationFunction/: BinaryActivation.h  ReLU.h  SigmoidActivation.h  SoftMax.h
nya-nn/nyann/DataSet/: TrainDataSet.h
nya-nn/nyann/Layer/: FCLayer.h
nya-nn/nyann/drafts/: DataSet_draft.h  io_draft.h
nya-nn/nyann/utils/: Size.h  exceptions.h  io.h
nyann/: main.cpp  nyann.h  nyann.vcxproj  nyann.vcxproj.filters
nyann-sandbox/: nyann-sandbox.cpp  nyann-sandbox.vcxproj  nyann-sandbox.vcxproj.filters  weights.txt
nyann-tests/: CMakeLists.txt  by Alex  nyann-tests.vcxproj  nyann-tests.vcxproj.filters  pch.h  test.cpp  test_ActivationFunction.cpp  test_BinaryActivation.cpp  test_ConvLayer1D.cpp  test_DataSet.cpp  test_FCLayer.cpp  test_Index.cpp  test_Net.cpp  test_Serializer.cpp  test_Size.cpp  test_Slice.cpp  test_TrainDataSet_draft.cpp  test_conversion.cpp  test_dataset_operations.cpp  test_dataset_reducers.cpp  test_drafts.cpp  test_exceptions.cpp  test_goal.cpp  test_inbox.cpp  test_usage.cpp  test_utils.cpp  test_utils_draft.cpp
nyann/examples/: labs.h
nyann/nyann/: ActivationFunction.h  Layer.h  Loss.h  Net.h  Optimizer.h  _config.h  dataset.h  drafts.h  utils.h
nyann/nyann-examples/: labs.h
nyann/nyann-python/: generate_dataset.py  plot.py
nyann/nyann-python/wrappers/: DataSetGeneration.h  plot.h
nyann/nyann/ActivationFunction/: BinaryActivation.h  BipolarActivation.h  LinearActivation.h  ReLU.h  ReLUActivation.h  SigmoidActivation.h  SoftMax.h  SoftMaxActivation.h  SoftMaxActivatoin.h
nyann/nyann/DataSet/: DataSetOperation.h  DataSetReducer.h  DataSetSerializer.h  TrainDataSet.h
nyann/nyann/Layer/: ConvLayer1D.h  FCLayer.h
nyann/nyann/Loss/: MSELoss.h
nyann/nyann/Optimizer/: SGDOptimizer.h
nyann/nyann/drafts/: DataSet_draft.h  TrainDataSet_draft.h  io_draft.cpp  io_draft.h  utils_draft.h
nyann/nyann/utils/: Index.h  Serializer.h  Size.h  Slice.h  bool_operations.h  conversion.cpp  conversion.h  dataset_operations.h  dataset_reducers.h  exceptions.h  io.h
